RM-8711 Fix scrollbar gutter display when there is no scrollbar

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocAutoCompleteReferenceValue.UI.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocAutoCompleteReferenceValue.UI.css
@@ -13,7 +13,6 @@
 {
   width: 100%;
   height: 100%;
-  scrollbar-gutter: stable;
   border: 1px solid Black;
   background-color: White;
   box-sizing: border-box;
